# fresha-api-zohobooks

./: .gitignore  README.md  docker-compose.yml  group_by.py  main.py  nx.json  package-lock.json  package.json  requirements.txt  settings.py
api/: zohobooks.py
apps/api/: .gitignore  README.md  project.json  pyproject.toml
apps/api/api/prisma/: schema.prisma
apps/api/tests/: test_index.py
apps/backend/: README.md  project.json  pyproject.toml
apps/backend/backend/: main.py  settings.py
apps/backend/backend/api/: zohobooks.py
apps/backend/backend/authentication/: session.py
apps/backend/backend/dao/: customers.py  fresha.py  invoices.py  payments.py
apps/backend/backend/routes/: invoices.py  sales.py  scheduled_jobs.py  transactions.py  zoho.py
apps/backend/backend/scrapping/: fresha.py  fresha_e2e.py
apps/backend/backend/tasks/: qstash.py  queue_process.py  redis.py  workers.py
apps/backend/backend/utils/: banks.py  constants.py  date.py  invoices.py  tax.py
apps/backend/tasks/: redis.py  scrape_fresha_transactions.py
apps/frontend/: tailwind.config.js  tsconfig.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/(app)/: layout.tsx
apps/frontend/app/dashboard/: layout.tsx  page.tsx
apps/frontend/components/: auth-form.tsx  auth-from.tsx  site-header.tsx
apps/frontend/lib/: auth.ts  makerequest.ts  utils.ts
database/prisma/: schema.prisma
dummy/: Invoices_temp.json  grouped_data.json  payments_temp.json
scrapping/: fresha.py
scrapping/html/: transactions_operators.py
utils/: date.py  group_by.py  url.py
(+11 files in other folders)
